src/views/home/Home.css
body {
    font-family: 'Montserrat', sans-serif;
    font-size: 20px;
    font-weight: 400;
}

h1 {
    font-size: 55px;
    font-weight:800;
}

h2 {
    font-size: 50px;
    font-weight:800;
}

.home_badge_div {
    display: flex;
    align-items: center;
    flex-direction: column;
    text-align: center;
}

.home_badge {
    height: 200px;
    width: 200px;
    /* offset-x, offset-y, blur, color */
    filter: drop-shadow(15px 5px 2px rgb(197, 197, 197));
}

.home_badge_text {
    font-size: 15px;
    font-weight: 400;
}

.home_splash {
    height: 600px;
    width: 712px;
    /* margin-top: 1.42rem; */
}

.home_about_div {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
}

.home_about_text {
    text-align: center;
    width: 520px;
    font-size: 20px;
    margin-bottom: 0;
}

.home_about_title {
    margin: 0;
    width: 250px;
}

.home_divider_div {
    display: flex;
    /* justify-content: center; */
    text-align: center;
}

.home_dividers {
    background-color: black;
    width: 10px;
    height: 600px;
    margin: 0;
}

.home_divider_div_h {
    display: flex;
    text-align: center;
    margin: 2rem;
}

.home_dividers_h {
    background-color: black;
    width: 700px;
    height: 10px;
    margin: 0;
}

.home_staff_portrait_div {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
}

.home_staff_portrait_picture {
    height: 200px;
    width: 200px;
}

.home_staff_text {
    width: 500px;
    font-weight: 300;
}

